--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,5 +15,6 @@ path = "examples/example.rs"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+rand = "0.8.3"
 redis = "0.20.0"
 thiserror = "1.0"
