--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -13,8 +13,8 @@ jobs:
             ~/.cargo/registry
             ~/.cargo/git
             ./target
-          key: ${{ runner.os }}-redlock-rs-${{ hashFiles('Cargo.toml') }}
-          restore-keys: ${{ runner.os }}-redlock-rs-
+          key: ${{ runner.os }}-redsync-${{ hashFiles('Cargo.toml') }}
+          restore-keys: ${{ runner.os }}-redsync-
       - uses: actions-rs/toolchain@v1
         with:
           profile: minimal
@@ -34,8 +34,8 @@ jobs:
             ~/.cargo/registry
             ~/.cargo/git
             ./target
-          key: ${{ runner.os }}-redlock-rs-${{ hashFiles('Cargo.toml') }}
-          restore-keys: ${{ runner.os }}-redlock-rs-
+          key: ${{ runner.os }}-redsync-${{ hashFiles('Cargo.toml') }}
+          restore-keys: ${{ runner.os }}-redsync-
       - uses: actions-rs/toolchain@v1
         with:
           profile: minimal
@@ -57,8 +57,8 @@ jobs:
             ~/.cargo/registry
             ~/.cargo/git
             ./target
-          key: ${{ runner.os }}-redlock-rs-${{ hashFiles('Cargo.toml') }}
-          restore-keys: ${{ runner.os }}-redlock-rs-
+          key: ${{ runner.os }}-redsync-${{ hashFiles('Cargo.toml') }}
+          restore-keys: ${{ runner.os }}-redsync-
       - uses: actions-rs/toolchain@v1
         with:
           profile: minimal
@@ -80,8 +80,8 @@ jobs:
             ~/.cargo/registry
             ~/.cargo/git
             ./target
-          key: ${{ runner.os }}-redlock-rs-${{ hashFiles('Cargo.toml') }}
-          restore-keys: ${{ runner.os }}-redlock-rs-
+          key: ${{ runner.os }}-redsync-${{ hashFiles('Cargo.toml') }}
+          restore-keys: ${{ runner.os }}-redsync-
       - uses: actions-rs/toolchain@v1
         with:
           profile: minimal
