--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ description = "A Rust implementation of Redlock for distributed locks with Redis
 readme = "README.md"
 homepage = "https://github.com/jace-ys/redsync"
 repository = "https://github.com/jace-ys/redsync"
-license-file = "LICENSE"
+license = "MIT"
 keywords = ["redsync", "redlock", "redis", "distributed-locks", "distributed-systems"]
 categories = ["concurrency", "algorithms"]
 
