--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -27,15 +27,18 @@ jobs:
         with:
           command: publish
           args: --token ${{ secrets.CRATESIO_TOKEN }}
+      - name: Get tag
+        id: tag
+        run: echo ::set-output name=VERSION::${GITHUB_REF/refs\/tags\//}
       - uses: actions/create-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: ${{ github.ref }}
-          release_name: ${{ github.ref }}
+          tag_name: ${{ steps.tag.outputs.VERSION }}
+          release_name: v${{ steps.tag.outputs.VERSION }}
           body: |
             Add the following line to your Cargo.toml file:
 
             ```toml
-            redsync = "${{ github.ref }}"
+            redsync = "${{ steps.tag.outputs.VERSION }}"
             ```
